<resources>

    <string name="app_name">Mobilesafe</string>
	<string name="version_unknow">版本号未知</string>
	
	<string name="title_activity_main">安全卫士</string>
	<string name="title_activity_lostprotected">手机防盗</string>
	<string name="title_activity_atools">高级工具</string>
	
	<string name="tv_name_default">功能名称</string>
	
	<string name="main_item_name_lostprotected">防盗</string>
	<string name="main_item_name_commu">通讯卫士</string>
	<string name="main_item_name_software">软件管理</string>
	<string name="main_item_name_task">任务管理</string>
	<string name="main_item_name_flow">流量管理</string>
	<string name="main_item_name_kill">手机杀毒</string>
	<string name="main_item_name_os_opt">系统优化</string>
	<string name="main_item_name_heightools">高级工具</string>
	<string name="main_item_name_setting">设置中心</string>
	
	<string name="lost_priority_callphone">1000</string>
	
	<string name="title_dialog_lostprotected_setup">设置密码</string>
	<string name="tv_dialog_lostprotected_setup_pwd">设置手机防盗的密码</string>
	<string name="tv_dialog_lostprotected_normal_setup_pwd">输入密码</string>
	<string name="tv_dialog_lostprotected_setup_pwd_agent">再次输入密码</string>
	<string name="bt_dialog_lostprotected_ok">确认</string>
	<string name="bt_dialog_lostprotected_cancle">取消</string>
	
	<string name="tip_pwd_is_empty">密码为空，请输入</string>
	<string name="tip_pwd_is_error">密码错误，请重新输入</string>
	<string name="tip_pwd_agent_not_equals">两次输入密码不一致</string>
	
	<string name="title_activity_lostprotected_guide">设置向导</string>
	<string name="tv_setupguide_welcome_title">1.欢迎使用防盗设置</string>
	<string name="iv_content">图片</string>
	
	<string name="txt_unbind">没有绑定</string>
	<string name="txt_bind">已经绑定</string>
	<string name="msg_toast_unbind_sim">未绑定SIM卡，请进行绑定</string>
	<string name="msg_toast_input_phone_invalid">输入手机号无效，请重新输入</string>
	
	<string name="txt_isprotecting">正在保护中</string>
	<string name="txt_is_not_protecting">保护没有开启</string>
	
	<string name="msg_toast_disable_protecting">保护未开启，强烈建议请您开启保护</string>
	<string name="tv_lostprotect_safemobile">安全手机号码为:</string>
	<string name="cb_lostportect_protecting_tip">手机防盗正在保护中</string>
	<string name="cb_lostportect_not_protecting_tip">手机防盗未在保护中</string>
	<string name="tv_reset_lostprotect">重新进入设置向导</string>
</resources>
