<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_dialog_lostprotected_setup"
        android:textSize="24sp" />
    
    <LinearLayout 
        android:layout_height="180dip"
        android:layout_width="300dip"
        android:background="@color/lv_dialog_lostprotected"
        android:orientation="vertical">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_dialog_lostprotected_normal_setup_pwd"
            android:textColor="@color/tv_dialog_lostprotected_setup_pwd"/>
        
        <EditText
            android:id="@+id/et_dialog_lostprotected_setup_pwd"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="text"/>
        
         <LinearLayout
	        android:layout_width="300dip"
	        android:layout_height="50dip"
	        android:layout_marginTop="10dip"
	        android:gravity="center"
	        android:orientation="horizontal" >
	
	        <Button
	            android:id="@+id/bt_normal_dialog_ok"
	            android:layout_width="140dip"
	            android:layout_height="40dip"
	            android:background="@drawable/lost_button_ok_background"
	            android:text="@string/bt_dialog_lostprotected_ok" />
	
	        <Button
	            android:id="@+id/bt_normal_dialog_cancle"
	            android:layout_width="140dip"
	            android:layout_height="40dip"
	            android:layout_marginLeft="5dip"
	            android:background="@drawable/lost_button_ok_background"
	            android:text="@string/bt_dialog_lostprotected_cancle" />
	    </LinearLayout>
    </LinearLayout>

</LinearLayout>
